# RevOwky-CPP-LibDataChannel

./: App.js  App.tsx  README.md  package-lock.json  package.json
android/Rev-Lib-Gen-Functions/src/main/cpp/: CMakeLists.txt  Rev-Lib-Gen-Functions.cpp
android/Rev-Lib-Gen-Functions/src/main/cpp/rev_c/: rev_gen_functions.c  rev_gen_functions.h  rev_ping.c  rev_ping.h
android/Rev-Lib-Gen-Pers/: CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  build.gradle  cmake_install.cmake  conanfile.txt
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/arm64-v8a/lib/: libcurl.la
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/arm64-v8a/lib/pkgconfig/: libcurl.pc
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/armeabi-v7a/lib/: libcurl.la
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/armeabi-v7a/lib/pkgconfig/: libcurl.pc
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/x86/lib/: libcurl.la
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/x86/lib/pkgconfig/: libcurl.pc
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/x86_64/lib/: libcurl.la
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/x86_64/lib/pkgconfig/: libcurl.pc
android/Rev-Lib-Gen-Pers/libs/rev_curl/android-21/x86_64/share/man/man1/: curl.1
android/Rev-Lib-Gen-Pers/libs/rev_list/: rev_linked_list.c  rev_linked_list.h
android/Rev-Lib-Gen-Pers/libs/rev_map/: rev_map.c  rev_map.h
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/arm/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/arm/share/man/man1/: openssl-crl2pkcs7.1ossl  openssl-dhparam.1ossl  openssl-dsaparam.1ossl  openssl-ocsp.1ossl  openssl-passwd.1ossl  openssl-prime.1ossl  openssl-rehash.1ossl  openssl-s_server.1ossl  openssl-smime.1ossl  openssl-srp.1ossl  openssl-storeutl.1ossl  openssl-verification-options.1ossl  openssl-verify.1ossl
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/arm/share/man/man3/: ASN1_INTEGER_free.3ossl  ASN1_STRING_TABLE_add.3ossl  ASN1_STRING_free.3ossl  ASN1_STRING_print_ex.3ossl  BIO_f_md.3ossl  BIO_f_null.3ossl  BIO_f_readbuffer.3ossl  BIO_f_ssl.3ossl  BIO_get_buffer_num_lines.3ossl  BIO_get_ex_new_index.3ossl  BIO_get_init.3ossl  BIO_s_datagram.3ossl  BIO_set_callback.3ossl  BIO_socket_wait.3ossl  BN_add_word.3ossl  BN_mod_mul_reciprocal.3ossl  BN_new.3ossl  BN_num_bytes.3ossl  CMS_add0_cert.3ossl  CMS_add0_recipient_key.3ossl  CMS_digest_create_ex.3ossl  CMS_get0_SignerInfos.3ossl  CMS_get0_type.3ossl  CONF_modules_unload.3ossl  CRYPTO_THREAD_read_lock.3ossl  CRYPTO_memcmp.3ossl  CTLOG_STORE_get0_log_by_id.3ossl  CTLOG_STORE_new.3ossl  CT_POLICY_EVAL_CTX_new.3ossl  DH_check_params_ex.3ossl  DH_compute_key.3ossl  DH_new.3ossl  DSA_do_sign.3ossl  DSA_dup_DH.3ossl  DSA_generate_key.3ossl  (+146 more)
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/include/openssl/: bio.h  configuration.h  ssl.h
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android/Rev-Lib-Gen-Pers/libs/rev_openssl/android-21/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android/Rev-Lib-Gen-Pers/libs/rev_zlib/android-21/arm/lib/pkgconfig/: zlib.pc
android/Rev-Lib-Gen-Pers/libs/rev_zlib/android-21/arm64/lib/pkgconfig/: zlib.pc
android/Rev-Lib-Gen-Pers/libs/rev_zlib/android-21/x86/lib/pkgconfig/: zlib.pc
android/Rev-Lib-Gen-Pers/libs/rev_zlib/android-21/x86_64/lib/pkgconfig/: zlib.pc
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_clib_sqlite_pers/rev_pers_lib/rev_net/: rev_ping.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_files/: rev_curl_upload_file.c  rev_curl_upload_file.h  rev_gen_file_functions.c  rev_gen_file_functions.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_gen_functions/: rev_gen_functions.c  rev_gen_functions.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_net/: rev_ping.cpp
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_db_init/: rev_db_init.c  rev_db_init.h  rev_pers_db_mappers.c  rev_pers_db_mappers.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_entity/rev_pers_rev_entity/: rev_table_create.cpp
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_entity/rev_pers_rev_group_entity/: rev_pers_rev_group_entity.c
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_lib_connectors/: rev_pers_lib_db_data_connectors.c  rev_pers_lib_db_data_connectors.h  rev_perslib_create_init.c  rev_perslib_create_init.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_rev_entity/: rev_table_create.cpp
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_rev_entity/rev_db_models/: rev_entity.c  rev_entity.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_rev_entity/rev_pers_delete/: rev_pers_delete.c  rev_pers_delete.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_rev_entity/rev_pers_lib_read/: rev_pers_read.c  rev_pers_read.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_pers_rev_entity/rev_pers_update/: rev_pers_update.c  rev_pers_update.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_timeline/rev_db_models/: rev_timeline.h
android/Rev-Lib-Gen-Pers/src/main/cpp/rev_pers_lib/rev_timeline/rev_pers_read/: rev_pers_read_rev_timeline.c
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/: RevJSONEntityConstructor.java
android/Rev-Lib-Gen-Pers/src/main/jni/: a.out  rev-pers-lib-create.cpp  rev-pers-lib-create.hpp  rev-pers-lib-delete.cpp  rev-pers-lib-delete.h  rev-pers-lib-delete.hpp  rev-pers-lib-read.cpp  rev-pers-lib-read.h  rev-pers-lib-read.hpp  rev-pers-lib-update.cpp  rev_annotation_jni_loader.cpp  rev_annotation_jni_loader.h  rev_init_jni_lib.cpp  rev_init_jni_lib.hpp  rev_metadata_jni_loader.cpp  rev_metadata_jni_loader.h  rev_pers_jni_structs.h  rev_pers_react_native_events.cpp  rev_pers_react_native_events.hpp
android/Rev-Lib-Gen-Pers/src/main/jni/rev_pers_entity_type_init/: rev_pers_object_init.cpp  rev_pers_object_init.h
ios/: Podfile
(+1048 files in other folders)
